--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
           <p style="color: white"><strong>Ejercicios del laboratorio 01 del curso DAWA</strong></p>
         </div>
       </div>
-      <!--<script  type="text/javascript" src="ejercicio01.js"></script>
+      <!--
+      <script  type="text/javascript" src="ejercicio01.js"></script>
       <script  type="text/javascript" src="ejercicio02.js"></script>
       <script  type="text/javascript" src="ejercicio03.js"></script>
       <script  type="text/javascript" src="ejercicio04.js"></script>
-      <script  type="text/javascript" src="ejercicio05.js"></script>-->
+      <script  type="text/javascript" src="ejercicio05.js"></script>
+        -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
