--- a/index.html
+++ b/index.html
@@ -4,29 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DAWA-JoaquinSalas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <!-- nuestros estilos -->
+    <link rel="stylesheet" href="./css/estilos.css" />
   </head>
   <body>
-      <div id="divTitulo" style="background-color: red; border-bottom: 4px solid #C4C4C4;">
-        <div id="cabecera" style="padding-top: 10px" align="center">
-          <p style="color: white"><strong>Ejercicios del laboratorio 01 del curso DAWA</strong></p>
-        </div>
+    <div class="raiz">
+      <nav>
+        <h1>Restaurant</h1>
+      </nav>
+      <div class="principal">
+        <nav class="menu">
+          <ul>
+            <li>Platos</li>
+            <li>Bebidas</li>
+          </ul>
+        </nav>
+        <main id="contenido">
+          <!-- aqui es donde irán nuestros productos-cards -->
+          <!-- <div class="tarjeta">
+                  <div class="imagen">
+                    <img src="https://picsum.photos/400">
+                  </div>
+                  <div class="texto">
+                    <h4>Ceviche</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    <div class="precio">
+                      <span>S/ 30</span>
+                      <button class="btn-agregar">
+                        Agregar
+                      </button>
+                    </div>
+                  </div>
+                </div> -->
+          
+        </main>
       </div>
-      <!--
-      <script  type="text/javascript" src="ejercicio01.js"></script>
-      <script  type="text/javascript" src="ejercicio02.js"></script>
-      <script  type="text/javascript" src="ejercicio03.js"></script>
-      <script  type="text/javascript" src="ejercicio04.js"></script>
-      <script  type="text/javascript" src="ejercicio05.js"></script>
-    -->
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <div class="carrito">
+      <p id="fecha"></p>
+      <table>
+        <!-- table-head -->
+        <thead>
+          <tr>
+            <th>Item</th>
+            <th>Cantidad</th>
+            <th>P.Unit.</th>
+            <th>SubTotal</th>
+          </tr>
+        </thead>
+        <!-- table-body -->
+        <tbody id="tbody-carrito">
+          <!-- items de la boleta -->
+        </tbody>
+      </table>
+
+      <div class="resumen">
+        <table>
+          <tbody id="tbody-resumen">
+
+          </tbody>
+        </table>
+        <button id="btn-pagar">
+          PAGAR ORDEN
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
